--- a/composer.json
+++ b/composer.json
@@ -201,6 +201,7 @@
     "vlucas/phpdotenv": "^5.5",
     "wpackagist-plugin/accordion-blocks": "*",
     "wpackagist-plugin/adminimize": "*",
+    "wpackagist-plugin/amazon-s3-and-cloudfront": "*",
     "wpackagist-plugin/breadcrumb-navxt": "*",
     "wpackagist-plugin/classic-editor": "*",
     "wpackagist-plugin/custom-post-type-permalinks": "*",
